[tool.poetry]
name = "tutorial_jax"
version = "0.1.0"
description = ""
authors = ["Marin Vlastelica <marin.vlastelicap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

jax = "*"
jaxlib = "*"
flax = "*"
optax = "*"
numpy = "*"
numpyro = "*"
matplotlib = "*"
ipykernel = "^6.4.1"
tensorflow-datasets = "*"
tensorflow = "2.2"
ipywidgets = "*"
jupyter = "*"
sklearn = "*"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
